# YAGE

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .travis.yml  3_88_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_88_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  3_88_82_2CompilerIdC_2CMakeCCompilerId_8c.html  3_88_82_2CompilerIdC_2CMakeCCompilerId_8c.js  3_89_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_89_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  3_89_81_2CompilerIdC_2CMakeCCompilerId_8c.html  3_89_81_2CompilerIdC_2CMakeCCompilerId_8c.js  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  README_8md.html  active_8cpp.html  active_8h.html  active_8h_source.html  annotated.html  annotated.js  annotated_dup.js  batch_8h.html  batch_8h_source.html  body_8cpp.html  body_8h.html  body_8h_source.html  body_8hpp.html  body_8hpp_source.html  bug.html  camera2d_8cpp.html  camera2d_8h.html  camera2d_8h_source.html  camera2d_8hpp.html  camera2d_8hpp_source.html  camera_8cpp.html  camera_8h.html  (+614 more)
Testing/Temporary/: CTestCostData.txt
cmake/: cppcheck.cmake
docs/: Doxyfile  Doxyfile.in  README.md  logger.dox  logger.md  main.md  mainpage.dox  matrix.dox  matrix.md  spritebatch.md  style.css  todolist.dox  todolist.md
editor/: editor.pro  editorwindow.cpp  editorwindow.h  editorwindow.ui  main.cpp  tooltip.py
examples/: CMakeLists.txt
examples/resources/: learnopenglshader.frag  textureshader.frag  textureshader.vert
examples/shooter/: bullet.cpp  bullet.h  direction.h  main.cpp  player.cpp  player.h
examples/simple/: main.cpp
examples/simple/resources/: colourshader.frag  colourshader.vert  learnopenglshader.frag  learnopenglshader.vert  textureshader.vert
examples/simplegame/: main.cpp  textureshader.frag
include/YAGE/: camera2d.h  camera2d.hpp  gl_texture.hpp  glslprogram.h  glslprogram.hpp  gltexture.hpp  imageloader.h  imageloader.hpp  (+21 more)
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/: default_shader.frag  default_shader.vert  defaultshader.frag  defaultshader.vert  textureshader.frag  textureshader.vert
scripts/: add_version_headers  travis_build  update_docs  update_version
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+117 more)
src/: .#particlebody.cpp  body.cpp  camera2d.cpp  glsl_program.cpp  glslprogram.cpp  image_loader.cpp  imageloader.cpp  inputmanager.cpp  io_manager.cpp  iomanager.cpp  particlebody.cpp  pico_png.cpp  picopng.cpp  rectanglecollider.cpp  resource_manager.cpp  resourcemanager.cpp  rigidbody.cpp  sprite.cpp  spritebatch.cpp  texture_cache.cpp  texturecache.cpp  vector2d.cpp  window.cpp
test/: .#matrixtest.cpp  double_size.cpp  matrix_test.cpp  matrixtest.cpp  particlebodytest.cpp  rigid_body_test.cpp  rigidbodytest.cpp  testbench.cpp  testbench.hpp  vector2d_test.cpp  windowtest.cpp  yagetest.cpp
tests/: CMakeLists.txt  active_test.cpp  activetest.cpp  component_test.cpp  entity_test.cpp  logtest.cpp  matrix_test.cpp  matrixtest.cpp  particlebody_test.cpp  particlebodytest.cpp  rendertest.cpp  rendertest.h  simplegame.cpp  spritesheettest.cpp  struct_test.cpp  structtest.cpp  syncqueuetest.cpp  testshared.h  threadtest.cpp  vector3_test.cpp  vector3test.cpp  vector4_test.cpp  vector4test.cpp  windowtest.cpp  yage_test.cpp  yagetest.cpp
tests/engine/: entities.json  test.cpp
tests/log/: test.cpp
tests/matrix/: test.cpp
tests/particlebody/: test.cpp
tests/resources/: floor_atlas.json
tests/spritesheet/: floor_atlas.json  test.cpp
tests/struct/: test.cpp
tests/syncqueue/: test.cpp
tests/thread/: test.cpp
tests/vector3/: test.cpp
tests/vector4/: test.cpp
tests/window/: test.cpp
tests/yage/: test.cpp
tools/: update_docs
yage/: CMakeLists.txt  yage.cpp  yage.h
yage/base/: CMakeLists.txt  camera2d.cpp  camera2d.h  glslprogram.cpp  glslprogram.h  imageloader.cpp  inputmanager.cpp  inputmanager.h  iomanager.cpp  iomanager.h  picopng.cpp  picopng.h  resourcemanager.cpp  sprite.cpp  sprite.h  spritebatch.cpp  spritebatch.h  spritesheet.cpp  spritesheet.h  texture.h  texturecache.cpp  vertex.h  window.cpp  window.h
yage/core/: .#logmessage.h  CMakeLists.txt  camera.cpp  camera.h  camera2d.cpp  camera2d.h  core.cpp  core.h  exception.cpp  exception.h  glslprogram.cpp  glslprogram.h  imageloader.cpp  imageloader.h  input.h  inputmanager.cpp  inputmanager.h  iomanager.cpp  iomanager.h  logger.cpp  logger.h  loglevel.h  logmessage.cpp  logmessage.h  logsink.cpp  logsink.h  picopng.cpp  picopng.h  resourcemanager.cpp  resourcemanager.h  sprite.cpp  sprite.h  spritebatch.cpp  spritebatch.h  spritesheet.cpp  spritesheet.h  stb_image.cpp  stb_image.h  texture.h  texturecache.cpp  (+4 more)
yage/data/: cube.h  input.h  renderbatch.h  texture.h  vertex.h
yage/engine/: component.h  engine.cpp  engine.h  entity.cpp  entity.h  entitymanager.h  space.cpp  system.h
yage/entity/: README.md  component.cpp  component.h  componentmanager.h  engine.cpp  engine.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  space.cpp  space.h  system.h  systemmanager.h
yage/experimental/: camera3d.h  loader.cpp  loader.h
yage/math/: CMakeLists.txt  math.h  matrix.h
yage/physics/: CMakeLists.txt  README.md  body.cpp  body.h  collider.h  collisionbody.h  particlebody.cpp  particlebody.h  physics.h  rectanglecollider.cpp  rectanglecollider.h  rigidbody.cpp  rigidbody.h
yage/render/: batch.h  drawable.h  ellipse.h  glslprogram.cpp  glslprogram.h  rectangle.cpp  rectangle.h  shader.cpp  shader.h  shape.h  sprite.cpp  sprite.h  spritebatch.cpp  spritebatch.h
yage/util/: active.cpp  active.h  noncopyable.h  syncqueue.h
(+26 files in other folders)
