cmake_policy(SET CMP0048 NEW)

file(GLOB YAGE_CORE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} core/*.cpp)
file(GLOB YAGE_MATH_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} math/*.cpp)
file(GLOB YAGE_PHYSICS_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} physics/*.cpp)
file(GLOB YAGE_CURRENT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

set(YAGE_SOURCES
  ${YAGE_CORE_SOURCES}
  ${YAGE_PHYSICS_SOURCES}
  ${YAGE_MATH_SOURCES}
  ${YAGE_CURRENT_SOURCES})

set(${PROJECT_NAME}_DIR
  ${PROJECT_SOURCE_DIR})

add_library(${PROJECT_NAME}
  ${YAGE_SOURCES})

target_include_directories(${PROJECT_NAME}
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
  ${OPENGL_INCLUDE_DIR})

target_link_libraries(${PROJECT_NAME}
  ${OPENGL_gl_LIBRARY}
  glfw
  glad)
